2016-06-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_rsa_public_encrypt): New function.

	* nasl/nasl_crypto2.h: Add new function header.

	* nasl/nasl_init.c (libfuncs): Add rsa_public_encrypt.

2016-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Increase required cmake version from 2.6
	to 2.8 because 2.8 is the minimum version we are sure it
	works with.

	* INSTALL: Update accordingly.

2016-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Increase dependency for libopenvas_wmiclient
	and libopenvas_wincmd from 0.0.1 to 1.0.1. 0.0.1 was a initial start,
	but meanwhile openvas-smb was release in a stable version.

2016-06-23  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_category_is_safe): Move function to nasl/nasl.c.
	Remove include from misc.

	* base/nvti.h: Remove function prototype.

	* nasl/nasl.c (nvti_category_is_safe): New function.

2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_free): Use
	g_list_free_full (available since glib 2.28) instead of
	a foreach/free combination.

2016-06-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_connect_authenticate): Add cacert
	parameter to dummy version of the function.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/openvas_networking.c: Remove a left-over include
	directive for stdlib.h that has no effect anymore.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/openvas_logging.c (openvas_log_lock_init): Drop
	code patch for Glib version < 2.31 because we can
	rely on presence of at least 2.32.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_ssh.c (my_ssh_pki_import_privkey_base64),
	misc/openvas_ssh.c (openvas_ssh_public_from_private):
	Now that we can rely on minimum of 2.32 of glib, we can