@@ -32,6 +32,8 @@ tree_cell *nasl_ripemd160 (lex_ctxt *);
 tree_cell *nasl_hmac_md2 (lex_ctxt *);
 tree_cell *nasl_hmac_md5 (lex_ctxt *);
 tree_cell *nasl_hmac_sha1 (lex_ctxt *);
+tree_cell *nasl_hmac_sha256 (lex_ctxt *);
+tree_cell *nasl_hmac_sha512 (lex_ctxt *);
 tree_cell *nasl_hmac_dss (lex_ctxt *);
 tree_cell *nasl_hmac_ripemd160 (lex_ctxt *);
 tree_cell *nasl_ntlmv1_hash (lex_ctxt *);
