@@ -336,6 +336,8 @@ static init_func libfuncs[] = {
   {"HMAC_MD2", nasl_hmac_md2, 0, {"data", "key", NULL}},
   {"HMAC_MD5", nasl_hmac_md5, 0, {"data", "key", NULL}},
   {"HMAC_SHA1", nasl_hmac_sha1, 0, {"data", "key", NULL}},
+  {"HMAC_SHA256", nasl_hmac_sha256, 0, {"data", "key", NULL}},
+  {"HMAC_SHA512", nasl_hmac_sha512, 0, {"data", "key", NULL}},
   {"HMAC_RIPEMD160", nasl_hmac_ripemd160, 0, {"data", "key", NULL}},
   {"ntlmv2_response", nasl_ntlmv2_response, 0,
    {"address_list", "address_list_len", "crypt_key", "domain", "ntlmv2_hash",
@@ -358,8 +360,6 @@ static init_func libfuncs[] = {
    {"buf", "buflen", "key", "seq_number", NULL}},
   {"get_smb2_signature", nasl_get_smb2_sign, 0,
    {"buf", "key", NULL}},
-  {"hmac_sha256", nasl_hmac_sha256, 0,
-   {"buf", "buflen", "key", "keylen", NULL}},
   {"dh_generate_key", nasl_dh_generate_key, 0, {"g", "p", "priv", NULL}},
   {"bn_random", nasl_bn_random, 0, {"need", NULL}},
   {"bn_cmp", nasl_bn_cmp, 0, {"key1", "key2", NULL}},
